--- a/nettbutikk/public/css/butikk.css
+++ b/nettbutikk/public/css/butikk.css
@@ -1,7 +1,7 @@
 #varer {
     display: flex;
     position: relative;
-    top: 150px;
+    margin-top: 10px;
     flex: wrap;
     border: solid black 2px;
     height: 400px;
